added some styling to the about page

--- a/src/app/core/about/about.component.html
+++ b/src/app/core/about/about.component.html
@@ -1,1 +1,21 @@
 <app-menu></app-menu>
+<div id="about-wrapper">
+    <div id="about-header">
+        <div>
+            <h3>About PRS</h3>
+            <p>A better way to manage product requests.</p>
+        </div>
+    </div>
+    <div id="about-body">
+        <div id="section-1">
+            <div class="content-box">
+                <h4>PRS stands for Product Request System</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum adipisci omnis unde, enim ipsam vel itaque facere labore libero ullam a laborum ratione, obcaecati aliquam numquam amet impedit autem distinctio?
+                Minima consectetur debitis quisquam perspiciatis accusantium itaque hic dignissimos, sed dolore voluptatum repellendus! Commodi, vel dolorem assumenda beatae ab iste, nam, ipsum ex dolor minima autem neque est quisquam similique!
+                Sequi libero ipsam voluptates blanditiis, ratione dolore magnam nostrum illo est tempore eos voluptatum ipsum perferendis quis et consequuntur possimus accusantium id vitae? Inventore fugit consequatur voluptas earum, laboriosam expedita.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod praesentium iste, cum, autem at est sequi dolorum sapiente maxime dolor expedita reiciendis quasi suscipit? Debitis deleniti sapiente harum! Quia, quibusdam.</p>
+            </div>
+            <img id="product-img" src="https://www.goodday.work/site/assets/img/solutions/product-management/header-product-management@2x.png" alt="">
+        </div>
+    </div>
+</div>
