updated color theme and added style variables

--- a/src/app/core/about/about.component.html
+++ b/src/app/core/about/about.component.html
@@ -1,21 +1,70 @@
 <app-menu></app-menu>
 <div id="about-wrapper">
-    <div id="about-header">
+    <header id="about-header">
         <div>
             <h3>About PRS</h3>
-            <p>A better way to manage product requests.</p>
+            <p>A better way to manage purchase requests.</p>
         </div>
-    </div>
+    </header>
     <div id="about-body">
         <div id="section-1">
             <div class="content-box">
-                <h4>PRS stands for Product Request System</h4>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum adipisci omnis unde, enim ipsam vel itaque facere labore libero ullam a laborum ratione, obcaecati aliquam numquam amet impedit autem distinctio?
-                Minima consectetur debitis quisquam perspiciatis accusantium itaque hic dignissimos, sed dolore voluptatum repellendus! Commodi, vel dolorem assumenda beatae ab iste, nam, ipsum ex dolor minima autem neque est quisquam similique!
-                Sequi libero ipsam voluptates blanditiis, ratione dolore magnam nostrum illo est tempore eos voluptatum ipsum perferendis quis et consequuntur possimus accusantium id vitae? Inventore fugit consequatur voluptas earum, laboriosam expedita.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod praesentium iste, cum, autem at est sequi dolorum sapiente maxime dolor expedita reiciendis quasi suscipit? Debitis deleniti sapiente harum! Quia, quibusdam.</p>
+                <h4>What is the PRS product?</h4>
+                <p>The Purchase Request System (PRS) is the capstone for the MAXimum boot camp and its completion is required for graduation. It's made up of a database, a backend, and a frontend using various technologies. 
+                The database contains five table: User, Vendor, Product, Request, and Requestline.</p>
+                <p>The backend implements Create, Read, Update, and Delete (CRUD), allowing end-users to have full control over data stored in the database.</p>
+                <p>Frontend consist of a login page, home page, about page, and components that allow transactions for each of the database tables.</p>
+                <p>Built by Max Technical Training Student Tony Rawlins.</p>
+                <p>Instructor is Greg Doud.</p>
+                <div id="btn-wrapper">
+                    <button class="btn">Register</button>
+                </div>
             </div>
-            <img id="product-img" src="https://www.goodday.work/site/assets/img/solutions/product-management/header-product-management@2x.png" alt="">
+            <img id="product-img" src=".\assets\purchase-order.png" alt="">
+        </div>
+        <div id="section-2">
+            <h4>Technologies:</h4>
+            <div id="tech-container">
+                <div class="tech-item">
+                    <h5 class="bold"><i class="fa-solid fa-database"></i>Database:</h5>
+                    <ul>
+                        <li><i class="fa-brands fa-windows"></i>Microsoft SQL Server</li>
+                        <li><i class="fa-solid fa-code"></i>T-SQL</li>
+                    </ul>
+                </div>
+                <div class="tech-item">
+                    <h5 class="bold"><i class="fa-solid fa-code"></i>Back-End:</h5>
+                    <ul>
+                        <li><i class="fa-solid fa-code"></i>C# .NET Framework</li>
+                        <li><i class="fa-solid fa-server"></i>Entity Framework</li>
+                    </ul>
+                </div>
+                <div class="tech-item">
+                    <h5 class="bold"><i class="fa-solid fa-desktop"></i>Front-End:</h5>
+                    <ul>
+                        <li><i class="fa-brands fa-html5"></i>HTML 5</li>
+                        <li><i class="fa-brands fa-css3-alt"></i>CSS 3</li>
+                        <li><i class="fa-brands fa-bootstrap"></i>Bootstrap 4</li>
+                        <li><i class="fa-brands fa-angular"></i>Angular TypeScript</li>
+                        <li><i class="fa-brands fa-js"></i>Javascript</li>
+                    </ul>
+                </div>
+                <div class="tech-item">
+                    <h5 class="bold"><i class="fa-solid fa-wrench"></i>Tools:</h5>
+                    <ul>
+                        <li><i class="fa-solid fa-laptop-code"></i>Visual Studio</li>
+                        <li><i class="fa-solid fa-laptop-code"></i>VS Code</li>
+                        <li><i class="fa-brands fa-square-git"></i>Git, Github, Git Bash</li>
+                        <li><i class="fa-solid fa-rocket"></i>Postman</li>
+                        <li><i class="fa-brands fa-windows"></i>Azure Data Studio</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
+    <footer id="about-footer">
+        <div>
+            <p>Tony Rawlins © 2023</p>
+        </div>
+    </footer>
 </div>
