--- a/src/app/core/e404/e404.component.css
+++ b/src/app/core/e404/e404.component.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: white; */
+    /* background-color: var(--text-color-light); */
     height: 100%;
 }
 
