--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --primary-color: #1f486e; /* lighter */
+    --secondary-color: #153756;
+    --tertiary-color: #ffa500;
+    --text-color-light: #ffffff;
+    --light-bg: #ffffff;
+    --header-color: #0b2946;
+    --deactivated: #c0c0c0;
+}
+
 html {
     height: 100vh;
 }
@@ -12,13 +22,15 @@ body {
     height: 80vh;
 }
 
-.btn-primary {
-    background-color: rgb(45, 121, 192);
-    border: 1px solid rgb(45, 121, 192);
+.btn-primary, .btn-primary:active, .btn-primary:focus {
+    background-color: var(--primary-color) !important;
+    /* border: 1px solid var(--primary-color); */
+    border: 0 !important;
 }
 
 .btn-primary:hover {
-    background-color: rgb(40, 106, 168);
+    background-color: var(--secondary-color) !important;
+    color: var(--text-color-light);
 }
 
 .btn {
