--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,14 +3,14 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    background-color: rgb(40, 106, 168);
+    background-color: var(--primary-color);
     padding: 0.5rem 1rem ;
     gap: 0.5rem;
     z-index: 999;
 }
 
 #title-wrapper i {
-    color: azure;
+    color: var(--text-color-light);
     font-size: 2rem;
     height: 100%;
 }
@@ -21,7 +21,7 @@
     text-align: center;
     line-height: 25px;
     height: auto;
-    color:azure;
+    color: var(--text-color-light);
     margin-bottom: -5px;
     padding: 0;
 }
