--- a/src/app/core/about/about.component.css
+++ b/src/app/core/about/about.component.css
@@ -1,28 +1,41 @@
 #about-wrapper {
+    display: flex;
+    flex-direction: column;
     width: 100%;
 }
 
-#about-header {
-    background-color: rgb(11 41 70);}
+#about-header, #about-footer {
+    background-color: #0b2946;
+}
 
 #about-header div {
     padding: 4rem;
-    color: white;
+    color: var(--text-color-light);
 }
+
+#about-footer div {
+    padding: 1.5rem;
+}
+
 
 #about-header div h3 {
     font-size: 4rem;
     font-weight: 700;
 }
 
-#about-header div p {
+#about-header div p, #about-footer div p {
     font-size: 1.3rem;
+    color: var(--text-color-light);
+}
+
+#about-footer div p {
+    text-align: center;
 }
 
 #about-body {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: var(--text-color-light);
 }
 
 #about-body div#section-1 {
@@ -30,12 +43,97 @@
 } 
 
 #about-body #product-img {
-    max-width: 1000px;
+    max-width: 800px;
     width: 100%;
-    transform: scaleX(-1);
+    transform: scaleX(-1) translateY(-100px);
 }
 
 #about-body .content-box {
     width: 40%;
     padding: 4rem;
+}
+
+
+#about-body div#section-2 {
+    background-color: orange;
+    padding: 2rem;
+}
+
+#about-body div#section-2 h4 {
+    color: var(--text-color-light);
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.btn {
+    background-color: #1f3152;
+    color: var(--text-color-light);
+    font-size: 1.25rem;
+    margin: 1rem 0;
+    padding: 0.75rem 5rem;
+    transition: 0.5s all ease-in;
+}
+
+.btn:hover {
+    background-color: orange;
+    color: #1f3152;;
+}
+
+#tech-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+.tech-item {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.25rem;
+    background-color: var(--text-color-light);
+    margin: 1rem;
+    min-width: 400px;
+    border: 6px var(--text-color-light) solid;
+    border-radius: 15px;
+}
+
+.tech-item ul {
+    list-style: none;
+    padding: 2rem;
+    margin: 0;
+    color: rgb(11 41 70);;
+}
+
+.tech-item ul li {
+    line-height: 2.5rem;
+}
+
+.tech-item h5 {
+    font-size: 1.5rem;
+    width: 100%;
+    background: #1f3152;
+    color: var(--text-color-light);
+    text-align: center;
+    padding: 0.5rem;
+    margin: 0;
+    border-radius: 12px 12px 0 0;
+}
+
+.tech-item h5 i, .tech-item ul li i {
+    margin-right: 1rem;
+}
+.tech-item ul li i{
+    width: 30px;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+
+@media screen and (max-width: 1280px) {
+    #about-body #product-img {
+        display: none;
+    }
+    #about-body .content-box {
+        width: 100%;
+    }
 }
