--- a/src/app/product/product-edit/product-edit.component.css
+++ b/src/app/product/product-edit/product-edit.component.css
@@ -8,7 +8,7 @@
 }
 
 #create-card {
-    background-color: white;
+    background-color: var(--text-color-light);
     display: grid;
     flex-direction: column;
     justify-content: center;
@@ -56,7 +56,7 @@ button, a {
 
 a {
     display: block;
-    color: whitesmoke;
+    color: var(--text-color-light);
     text-decoration: none;
     width: 100%;
 }
@@ -76,7 +76,7 @@ a {
 input, input:focus {
     outline: none;
     border: none;
-    border-bottom: 1px solid silver;
+    border-bottom: 1px solid var(--deactivated);
 }
 
 #item-select select {
@@ -84,5 +84,5 @@ input, input:focus {
 }
 
 .item input.readonly {
-    color: silver;
+    color: var(--deactivated);
 }
