--- a/src/app/request/request-edit/request-edit.component.css
+++ b/src/app/request/request-edit/request-edit.component.css
@@ -8,7 +8,7 @@
 }
 
 #create-card {
-    background-color: white;
+    background-color: var(--text-color-light);
     display: grid;
     flex-direction: column;
     justify-content: center;
@@ -56,7 +56,7 @@ button, a {
 
 a {
     display: block;
-    color: whitesmoke;
+    color: var(--text-color-light);
     text-decoration: none;
     width: 100%;
 }
@@ -76,9 +76,9 @@ a {
 input, input:focus {
     outline: none;
     border: none;
-    border-bottom: 1px solid silver;
+    border-bottom: 1px solid var(--deactivated);
 }
 
 .item input.readonly {
-    color: silver;
+    color: var(--deactivated);
 }
