--- a/src/app/request/request-get/request-get.component.css
+++ b/src/app/request/request-get/request-get.component.css
@@ -8,7 +8,7 @@
 }
 
 #create-card {
-    background-color: white;
+    background-color: var(--text-color-light);
     display: grid;
     flex-direction: column;
     justify-content: center;
@@ -33,7 +33,7 @@
 }
 
 .item input {
-    color: silver;
+    color: var(--deactivated);
     margin-left: 1rem;
     justify-self: right;
 }
@@ -57,7 +57,7 @@ button, a {
 
 a {
     display: block;
-    color: whitesmoke;
+    color: var(--text-color-light);
     text-decoration: none;
     width: 100%;
 }
@@ -77,14 +77,14 @@ a {
 input, input:focus {
     outline: none;
     border: none;
-    border-bottom: 1px solid silver;
+    border-bottom: 1px solid var(--deactivated);
 }
 
 .checkbox {
 	-webkit-appearance: none;
     appearance: none;
-	background-color: #fafafa;
-	border: 1px solid #cacece;
+	background-color: var(--light-bg);
+	border: 1px solid var(--deactivated);
 	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
 	padding: 6px;
 	border-radius: 3px;
@@ -93,15 +93,15 @@ input, input:focus {
 }
 
 .checkbox:active .checkbox:checked:active {
-    background-color: silver;
+    background-color: var(--deactivated);
     box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
 }
 
 .checkbox:checked {
-    background-color: #e9ecee;
-	border: 1px solid #adb8c0;
+    background-color: var(--light-bg);
+	border: 1px solid var(--deactivated);
 	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
-	color: #99a1a7;
+	color: var(--deactivated);
 }
 
 .checkbox:checked::after {
@@ -110,5 +110,5 @@ input, input:focus {
 	position: absolute;
 	top: 0px;
 	left: 0px;
-	color: #99a1a7;
+	color: var(--deactivated);
 }
