--- a/src/app/request/request-list/request-list.component.css
+++ b/src/app/request/request-list/request-list.component.css
@@ -1,7 +1,7 @@
 #sub-menu {
     display: flex;
     align-items: center;
-    background-color: rgb(45, 121, 192);
+    background-color: var(--primary-color);
     width: 100%;
     min-width: 453.63px;
 }
@@ -13,18 +13,18 @@
 
 a {
     text-decoration: none;
-    color: rgb(45, 121, 192);
+    color: var(--primary-color);
 }
 
 a#add-user {
     text-decoration: none;
-    color: #eeeeee;
+    color: var(--text-color-light);
     font-weight: bold;
     padding: 0.5rem;
 }
 
 a#add-user:hover {
-    color: #ffffff;;
+    color: var(--text-color-light);
 }
 
 #search-wrapper {
@@ -38,20 +38,20 @@ a#add-user:hover {
 }
 
 #search-wrapper input {
-    background-color: rgb(45, 121, 192);
-    color: #eeeeee;
+    background-color: var(--primary-color);
+    color: var(--text-color-light);
     max-width: 0;
     opacity: 0;
     margin: 0;
     padding: 0;
     border: 0;
-    border-bottom: 1px silver solid;
+    border-bottom: 1px var(--deactivated) solid;
     overflow: hidden;
     transition:  2s;
 }
 
 #search-wrapper input::placeholder {
-    color: #eeeeee;
+    color: var(--text-color-light);
 }
 
 #search-wrapper input:focus {
@@ -66,24 +66,24 @@ a#add-user:hover {
 
 .fa-magnifying-glass {
     font-size: 1rem;
-    color: #eeeeee;;
+    color: var(--text-color-light);;
     cursor: pointer;
     padding: 0;
     transition: opacity 1s ease;
 }
 
 .fa-magnifying-glass:hover {
-    color: #ffffff;
+    color: var(--text-color-light);
 }
 
 .fa-sort {
     margin-left: 0.5rem;
-    color: #e2e2e2;
+    color: var(--text-color-light);
     cursor: pointer;
 }
 
 .fa-sort:hover {
-    color: #cacaca;
+    color: var(--text-color-light);
 }
 
 .status {
@@ -108,5 +108,5 @@ a#add-user:hover {
 }
 
 .disabled {
-    color: silver;
+    color: var(--deactivated);
 }
