--- a/src/app/requestline/requestline-add/requestline-add.component.css
+++ b/src/app/requestline/requestline-add/requestline-add.component.css
@@ -8,7 +8,7 @@
 }
 
 #create-card {
-    background-color: white;
+    background-color: var(--text-color-light);
     display: grid;
     flex-direction: column;
     justify-content: center;
@@ -69,11 +69,11 @@ button {
 
 #btn-container a {
     display: block;
-    color: whitesmoke;
+    color: var(--text-color-light);
     text-decoration: none;
     width: 100%;
 }
 
 .readonly {
-    color: silver;
+    color: var(--deactivated);
 }
