--- a/src/app/core/about/about.component.html
+++ b/src/app/core/about/about.component.html
@@ -23,7 +23,8 @@
             <img id="product-img" src=".\assets\purchase-order.png" alt="">
         </div>
         <div id="section-2">
-            <h4>Technologies:</h4>
+            <img id="tech-img" src=".\assets\digital-vector.png" alt="">
+            <h4>Technologies Used</h4>
             <div id="tech-container">
                 <div class="tech-item">
                     <h5 class="bold"><i class="fa-solid fa-database"></i>Database:</h5>
