--- a/src/app/core/about/about.component.html
+++ b/src/app/core/about/about.component.html
@@ -14,8 +14,19 @@
                 The database contains five table: User, Vendor, Product, Request, and Requestline.</p>
                 <p>The backend implements Create, Read, Update, and Delete (CRUD), allowing end-users to have full control over data stored in the database.</p>
                 <p>Frontend consist of a login page, home page, about page, and components that allow transactions for each of the database tables.</p>
-                <p>Built by Max Technical Training Student Tony Rawlins.</p>
-                <p>Instructor is Greg Doud.</p>
+                <p class="credit-name"><b>Student:</b> Tony Rawlins</p>
+                <p class="credit-name"><b>Max Instructor:</b> Greg Doud</p>
+                <h4>Github Repositories</h4>
+                <div id="code-wrapper">
+                    <div class="code-item">
+                        <h6>Backend Code</h6>
+                        <a href="https://github.com/TJRawlins/prs_csharp/tree/main/PRS" target="_blank"><img class="code-img" src=".\assets\backend-code.png" alt="Backend - Github"></a>
+                    </div>
+                    <div class="code-item">
+                        <h6>Frontend Code</h6>
+                        <a href="https://github.com/TJRawlins/prs-ng" target="_blank"><img class="code-img" src=".\assets\frontend-code.png" alt="Backend - Github"></a>
+                    </div>
+                </div>
                 <div id="btn-wrapper">
                     <button class="btn">Register</button>
                 </div>
