removed css animation for login

--- a/src/app/user/user-login/user-login.component.css
+++ b/src/app/user/user-login/user-login.component.css
@@ -92,7 +92,7 @@ button {
 
 
 /* start welcome animation */
-.welcome {
+/* .welcome {
     background: var(--light-bg);
     overflow: hidden;
     -webkit-font-smoothing: antialiased;
@@ -125,10 +125,10 @@ button {
     transform: translate(-50%, -50%);
     border-radius: 50%;
     animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-  }
+  } */
      
   /* moveIn */
-  .welcome header,
+  /* .welcome header,
   .welcome a.btn {
     opacity: 0;
     animation: moveIn 2s 3.1s ease forwards;
@@ -141,9 +141,9 @@ button {
     color: var(--primary-color);
     font-size: 2rem;
     font-weight: 700;
-  }
+  } */
   
-  @keyframes init {
+  /* @keyframes init {
     0% {
       width: 0px;
       height: 0px;
@@ -188,6 +188,7 @@ button {
     }
     100% {
       top: 100%;
+      display: none;
     }
   }
   
@@ -220,4 +221,4 @@ button {
     100% {
       opacity: 0;
     }
-  }
+  } */
