--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -1,7 +1,7 @@
-<div class="welcome">
+<!-- <div class="welcome">
     <span class="splash"></span>
     <span id="welcome"><i class="fa-solid fa-money-check-dollar"></i></span>
-</div>
+</div> -->
 <div id="create-wrapper">
     <div id="create-card">
         <h3>SIGN IN</h3>
